# learnings

./: README.md
aws-strands/: pyproject.toml
aws-strands/00-base-agent/: main.py
aws-strands/1-basic-persistent-memory-agent/: basic-persistent-memory-agent.py
aws-strands/2-structured-output/: structured_output_agent.py
aws-strands/3-mcp-agent/: mcp_agent.py  multiple_mcp_agent.py
aws-strands/4-human-in-the-loop/: hitl.py
aws-strands/5-agent-patterns/3-graph-based-workflow/: graph-based-workflow.py
aws-strands/5-agent-patterns/4-workflow-agent/: workflow_agent.py
aws-strands/5-agent-patterns/agents-as-tool/: agents_as_tool.py  main.py
aws-strands/5-agent-patterns/swarm-intelligence/: swarm_intelligence.py
aws-strands/6-observability/: observability.py
