[project]
name = "aws-strands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "google-genai>=2.10.0",
    "litellm>=1.90.1",
    "strands-agents>=1.45.0",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.8.2",
]
